# secure-cicd-example

./: .gitignore  .pre-commit-config.yaml  .semgrep.yml  .trivyignore  .trufflehog-exclude.txt  .trufflehog.yml  Cargo.toml  Dockerfile  README.md  RUST-ATTACK-SURFACE.md  SECURITY-PIPELINE-SUMMARY.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  osv-scanner.yml  security.yml  semgrep-publish.yml  semgrep.yml
.semgrep/rules/: rust-async-safety.yml  rust-cleartext-storage.yml  rust-cleartext-transmission.yml  rust-command-injection.yml  rust-cookie-security.yml  rust-deserialization.yml  rust-drop-panic.yml  rust-expect-in-handler.yml  rust-hardcoded-secrets.yml  rust-insecure-random.yml  rust-integer-safety.yml  rust-jwt-validation.yml  rust-log-security.yml  rust-memory-safety.yml  rust-mutex-poison.yml  rust-non-https.yml  rust-path-traversal-join.yml  rust-path-traversal.yml  rust-production-readiness.yml  rust-regex-injection.yml  rust-sql-injection.yml  rust-ssrf.yml  rust-temp-file-security.yml  rust-tls-bypass.yml  rust-toctou.yml  rust-uncontrolled-allocation.yml  rust-unsafe-audit.yml  rust-weak-crypto.yml  rust-web-security.yml  rust-xss.yml
src/: config.rs  main.rs  vulnerable.rs
